# finance-coach

./: .env.example  .envrc  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt  seed_data.py
docs/: implementation-plan.md  oreilly-talk-app-spec.md  oreilly-talk-concepts.md  oreilly-talk-outline-v5.md  technical-reference.md
scripts/: reset_demo.py  setup_indexes.py
src/: __init__.py  config.py  db.py  embeddings.py
src/agent/: __init__.py  generate_response.py  load_baseline.py  memory_formatter.py  select_memories.py  write_memories.py
src/models/: __init__.py  memory.py
src/prompts/: __init__.py  extraction.py  system.py
tests/: __init__.py  conftest.py
ui/: __init__.py  chat.py  sidebar.py
ui/components/: memory_card.py  raw_query_toggle.py
ui/tabs/: __init__.py  context_tab.py  data_tab.py  document_tab.py  search_tab.py
